--- a/ModuleData/Languages/MigrationTweaks_strings.xml
+++ b/ModuleData/Languages/MigrationTweaks_strings.xml
@@ -4,6 +4,19 @@
 		<tag language="English" />
 	</tags>
 	<strings>
+		<!--
+		||||||||||||||||||||||||||| Encyclopedia ||||||||||||||||||||||||||||
+		-->
+		<!--Additions and clarifications for the pages of eliminated kingdoms-->
+		<!--Regarding the last active leader-->
+		<string id="DvvoBmrEZ" text="Former " />
+		<!--Faction status as a name suffix -->
+		<string id="bdIYWo2R8" text=" (eliminated)" />
+		<!--Description epilogue -->
+		<string id="QLIrm7VAp" text="This faction was unable to cope with the variety of internal and external problems. It now belongs to history." />		
+		<!--
+		||||||||||||||||||||||||| Player inquiries ||||||||||||||||||||||||||
+		-->
 		<!--Player inquiry about AI joining - header-->
 		<string id="0DEJNa14n" text="A clan wishes to join your kingdom!" />
 		<!--Player inquiry about AI joining - body-->
@@ -34,5 +47,7 @@
 		<string id="mlMTdZg6M" text="The minimum period in days following a request from an AI clan to join the player's kingdom, after which a new request may appear. Default = 0 (no cooldown)." />
 		<string id="ZZKClL1sA" text="Determined kingdom pick logic" />
 		<string id="OUEwq5kM0" text="Specify if AI clans should always pick the most attractive kingdom instead of a random one when considering joining some kingdom or defecting. Enabling this can potentially increase intensity of clan migration between kingdoms." />
+		<string id="lc5iLtS0G" text="Leader defection fix" />
+		<string id="lqfhT75fH" text="Fixes a vanilla bug that allowed ruling clans to defect to other kingdoms while remaining the leaders of their former kingdoms. When applied, restricts ruling clans from defecting, unless they are the last active clan in their kingdom, in which case they can defect with all their fiefs and the former kingdom will be destroyed." />
 	</strings>
 </base>
