--- a/ModuleData/Languages/MigrationTweaks_strings.xml
+++ b/ModuleData/Languages/MigrationTweaks_strings.xml
@@ -13,7 +13,7 @@
 		<!--Faction status as a name suffix -->
 		<string id="bdIYWo2R8" text=" (eliminated)" />
 		<!--Description epilogue -->
-		<string id="QLIrm7VAp" text="This faction was unable to cope with the variety of internal and external problems. It now belongs to history." />		
+		<string id="QLIrm7VAp" text="This faction was unable to cope with the variety of internal and external problems. Now it belongs to history." />		
 		<!--
 		||||||||||||||||||||||||| Player inquiries ||||||||||||||||||||||||||
 		-->
