--- a/ModuleData/Languages/RU/MigrationTweaks_strings.xml
+++ b/ModuleData/Languages/RU/MigrationTweaks_strings.xml
@@ -47,11 +47,11 @@
 		<string id="mlMTdZg6M" text="Минимальный период в днях после запроса ИИ-клана о присоединении к королевству игрока, по истечении которого может быть получен новый запрос. По умолчанию = 0 (без кулдауна)." />
 		<string id="ZZKClL1sA" text="Детерминированный порядок выбора королевства" />
 		<string id="OUEwq5kM0" text="Укажите, должны ли ИИ-кланы выбирать только наиболее привлекательное королевство вместо случайного, когда думают присоедниться или дезертировать. Включение этой опции может увеличить интенсивность миграции кланов между королевствами." />
-		<string id="lc5iLtS0G" text="Исправление дизертирства правителей" />
-		<string id="lqfhT75fH" text="Исправляет ошибку, которая позволяла правящим кланам переходить в другие королевства, оставаясь лидерами своих бывших королевств. При включении запрещает правящим кланам дезертировать, если только они не являются последним активным кланом в своем королевстве. В этом случае они могут дезертировать со всеми своими феодальными владениями, а бывшее королевство будет разрушено." />
+		<string id="lc5iLtS0G" text="Исправление дезертирства правителей" />
+		<string id="lqfhT75fH" text="Исправляет ошибку, которая позволяла правящим кланам переходить в другие королевства, оставаясь лидерами своих бывших королевств. Правители могут дезертировать только если они являются последним активным кланом в королевстве и в этом случае они уходят со всеми своими феодальными владениями, а бывшее королевство уничтожается." />
 		<string id="gH9rnSGtM" text="Регулировка диалога о дезертирстве" />
 		<string id="HzC3XjypN" text="Изменяет проверку, которая упреждающе блокирует попытки убеждения, если бартерный цена дезертирства слишком высока или у игрока недостаточно денег. Включение позволяет изменить порог цены и заставляет игру учитывать нефинансовые активы игрока." />
 		<string id="QL1TVKjBX" text="Порог цены (в миллионах)" />
-		<string id="zNwukiWT4" text="Измеряется вмиллионах. Если требования лорда при дезертирстве превысят это значение, он откажется вести переговоры. Ноль означает отсутствие порога. В оригинале - 2.Поумолчанию = 2." />		
+		<string id="zNwukiWT4" text="Измеряется в миллионах. Если требования лорда при дезертирстве превысят это значение, он откажется вести переговоры. Ноль означает отсутствие порога. В оригинале - 2.Поумолчанию = 2." />		
 	</strings>
 </base>
