--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.1.0
+Game Versions: e1.6.1,e1.6.2,e1.6.3,e1.6.4,e1.6.5,e1.7.0,e1.7.1
+* Compatibility with e1.7.1
+* Switched to module loader
+---------------------------------------------------------------------------------------------------
 Version: 2.2.0.0
 Game Versions: e1.6.1,e1.6.2,e1.6.3,e1.6.4,e1.6.5,e1.7.0
 * Compatibility with e1.7.0
