--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.1.2
+Game Versions: e1.6.1,e1.6.2,e1.6.3,e1.6.4,e1.6.5,e1.7.0,e1.7.1
+* Switched back to fixed Module Loader
+---------------------------------------------------------------------------------------------------
 Version: 2.2.1.1
 Game Versions: e1.6.1,e1.6.2,e1.6.3,e1.6.4,e1.6.5,e1.7.0,e1.7.1
 * Switched back from module loader to ImplementationLoader for now
