--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.2.2.0
+Game Versions: e1.7.2
+* Compatibility with e1.7.2
+---------------------------------------------------------------------------------------------------
 Version: 2.2.1.3
 Game Versions: e1.6.1,e1.6.2,e1.6.3,e1.6.4,e1.6.5,e1.7.0,e1.7.1
 * Removed unused FieldRefs 
