--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.3.0
+Game Versions: v1.0.0
+* Compatibility with v1.0.0
+---------------------------------------------------------------------------------------------------
 Version: 2.2.3.0
 Game Versions: e1.7.2, e1.8.0
 * Compatibility with e1.8.0
