--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.3.3
+Game Versions: v1.0.0,v1.0.1
+* Reverted logging path back to where it belongs (%USERPROFILE%\Documents\Mount and Blade II Bannerlord\Configs\ModLogs\)
+* This time logging should work both for Nexus Mods and Steam Workshop versions of the mod for real!
+---------------------------------------------------------------------------------------------------
 Version: 2.3.2
 Game Versions: v1.0.0,v1.0.1
 * Changed logging path to the (game directory)\bin\Win64_Shipping_Client\Configs\ModLogs
-* Logging should work both for Nexus Mods and Steam Workshop versions of the mod now.
+* Logging should work both for Nexus Mods and Steam Workshop versions of the mod now
 ---------------------------------------------------------------------------------------------------
 Version: 2.3.1
 Game Versions: v1.0.0,v1.0.1
