--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.3.4
+Game Versions: v1.0.0,v1.0.1,v1.0.2,v1.0.3,v1.1.0
+* Adapted for v1.1.0
+---------------------------------------------------------------------------------------------------
 Version: 2.3.3
 Game Versions: v1.0.0,v1.0.1
 * Reverted logging path back to where it belongs (%USERPROFILE%\Documents\Mount and Blade II Bannerlord\Configs\ModLogs\)
