Update for beta version

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 2.4.3
+Game Versions: v1.0.0 - v1.2.10 (except v1.1.6)
+* Adapted for v1.2.10
+---------------------------------------------------------------------------------------------------
 Version: 2.4.2
 Game Versions: v1.0.0 - v1.2.9 (except v1.1.6)
 * Fixed a bug with framework declaration
